--- a/mis-templates/templates/base.html
+++ b/mis-templates/templates/base.html
@@ -5,7 +5,7 @@
     </head>
 
     <body style="margin: 0">
-        <h1 style="background-color: #ddd; color: #888; margin: 0 height: 50px">
+        <h1 style="background-color: #f0f8ff; color: #525052; margin: 0 height: 80px">
             My Templates
         </h1>
 
