--- a/mis-templates/templates/base.html
+++ b/mis-templates/templates/base.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Templates!</title>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>My Templates</title>
+      <link href="https://fonts.googleapis.com/css?family=Neuton" rel="stylesheet">
+      <link type="text/css" rel="stylesheet" href="/static/css/main.css" />
+
     </head>
 
     <body style="margin: 0">
